--- a/Draw/Controller/Feed/Cell/CommentHeaderView~ipad.xib
+++ b/Draw/Controller/Feed/Cell/CommentHeaderView~ipad.xib
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">11G56</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1138.51</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
 		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1926</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
-			<string>IBUIButton</string>
 			<string>IBUIView</string>
+			<string>IBUIButton</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -37,10 +37,9 @@
 				<array class="NSMutableArray" key="NSSubviews">
 					<object class="IBUIButton" id="131021674">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{7, 0}, {120, 70}}</string>
+						<int key="NSvFlags">308</int>
+						<string key="NSFrame">{{7, 0}, {120, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="868261575"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">3</int>
@@ -55,7 +54,6 @@
 						<object class="NSColor" key="IBUISelectedTitleColor" id="546644767">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
-							<string key="IBUIColorCocoaTouchKeyPath">darkTextColor</string>
 						</object>
 						<object class="NSColor" key="IBUINormalTitleColor" id="56304588">
 							<int key="NSColorSpace">3</int>
@@ -77,10 +75,9 @@
 					</object>
 					<object class="IBUIButton" id="172346634">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{150, 0}, {120, 70}}</string>
+						<int key="NSvFlags">308</int>
+						<string key="NSFrame">{{150, 0}, {120, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="70869917"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
@@ -97,10 +94,9 @@
 					</object>
 					<object class="IBUIButton" id="70869917">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{291, 0}, {120, 70}}</string>
+						<int key="NSvFlags">308</int>
+						<string key="NSFrame">{{291, 0}, {120, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="535364148"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">6</int>
@@ -117,10 +113,9 @@
 					</object>
 					<object class="IBUIButton" id="154795329">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{400, 0}, {120, 70}}</string>
+						<int key="NSvFlags">308</int>
+						<string key="NSFrame">{{400, 0}, {120, 50}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="920436055"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">7</int>
@@ -137,10 +132,9 @@
 					</object>
 					<object class="IBUIView" id="868261575">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{96, 17}, {2, 36}}</string>
+						<int key="NSvFlags">317</int>
+						<string key="NSFrame">{{96, 12}, {2, 25}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="172346634"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="705330438">
 							<int key="NSColorSpace">3</int>
@@ -151,10 +145,9 @@
 					</object>
 					<object class="IBUIView" id="535364148">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{359, 17}, {2, 36}}</string>
+						<int key="NSvFlags">317</int>
+						<string key="NSFrame">{{359, 12}, {2, 25}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="154795329"/>
 						<reference key="IBUIBackgroundColor" ref="705330438"/>
 						<int key="IBUITag">600</int>
@@ -162,10 +155,9 @@
 					</object>
 					<object class="IBUIView" id="920436055">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">301</int>
-						<string key="NSFrame">{{431, 17}, {2, 36}}</string>
+						<int key="NSvFlags">317</int>
+						<string key="NSFrame">{{431, 12}, {2, 25}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="882872348"/>
 						<reference key="IBUIBackgroundColor" ref="705330438"/>
 						<int key="IBUITag">700</int>
@@ -173,17 +165,15 @@
 					</object>
 					<object class="IBUIView" id="882872348">
 						<reference key="NSNextResponder" ref="191373211"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 69}, {724, 1}}</string>
+						<int key="NSvFlags">308</int>
+						<string key="NSFrame">{{0, 69}, {724, 0}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="IBUIBackgroundColor" ref="705330438"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{724, 70}</string>
+				<string key="NSFrameSize">{724, 50}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="131021674"/>
 				<reference key="IBUIBackgroundColor" ref="813830947"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -331,33 +321,15 @@
 			<nil key="sourceID"/>
 			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommentHeaderView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="actions">
-						<string key="NS.key.0">clickButton:</string>
-						<string key="NS.object.0">id</string>
-					</object>
-					<object class="NSMutableDictionary" key="actionInfosByName">
-						<string key="NS.key.0">clickButton:</string>
-						<object class="IBActionInfo" key="NS.object.0">
-							<string key="name">clickButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommentHeaderView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1296" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">1926</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
