--- a/Draw/Controller/Feed/Cell/UserInfoCell~ipad.xib
+++ b/Draw/Controller/Feed/Cell/UserInfoCell~ipad.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUITableViewCell</string>
@@ -42,10 +42,9 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUILabel" id="781311575">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{174, 37}, {444, 76}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{124, 28}, {494, 58}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1050053940"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -72,10 +71,9 @@
 							</object>
 							<object class="IBUIView" id="361712317">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{25, 17}, {109, 115}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{25, 13}, {88, 88}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="781311575"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -88,10 +86,9 @@
 							</object>
 							<object class="IBUIView" id="1050053940">
 								<reference key="NSNextResponder" ref="895739986"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{0, 149}, {724, 1}}</string>
+								<int key="NSvFlags">269</int>
+								<string key="NSFrame">{{0, 114}, {724, 1}}</string>
 								<reference key="NSSuperview" ref="895739986"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">3</int>
@@ -100,9 +97,8 @@
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 						</array>
-						<string key="NSFrameSize">{724, 149}</string>
+						<string key="NSFrameSize">{724, 114}</string>
 						<reference key="NSSuperview" ref="208556046"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="361712317"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -115,9 +111,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{724, 150}</string>
+				<string key="NSFrameSize">{724, 115}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="895739986"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="895739986"/>
@@ -206,44 +201,15 @@
 			<nil key="sourceID"/>
 			<int key="maxID">12</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">PPTableViewCell</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/PPTableViewCell.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">UserInfoCell</string>
-					<string key="superclassName">PPTableViewCell</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="avatarView">UIView</string>
-						<string key="nickLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="avatarView">
-							<string key="name">avatarView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="nickLabel">
-							<string key="name">nickLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/UserInfoCell.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1296" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
