--- a/Draw/Controller/Feed/Cell/DrawInfoCell~ipad.xib
+++ b/Draw/Controller/Feed/Cell/DrawInfoCell~ipad.xib
@@ -57,14 +57,14 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{128, 498}, {76, 22}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
-								<reference key="NSNextKeyView" ref="338525193"/>
+								<reference key="NSNextKeyView" ref="150106597"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText">99小时前</string>
-								<object class="NSColor" key="IBUITextColor" id="773460929">
+								<object class="NSColor" key="IBUITextColor" id="111299289">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
 								</object>
@@ -97,10 +97,10 @@
 									<bytes key="NSWhite">MAA</bytes>
 								</object>
 							</object>
-							<object class="IBUIButton" id="338525193">
+							<object class="IBUIButton" id="150106597">
 								<reference key="NSNextResponder" ref="765286161"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{212, 497.5}, {385, 22}}</string>
+								<string key="NSFrame">{{212, 497}, {385, 22}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -112,7 +112,7 @@
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUINormalTitleColor" ref="773460929"/>
+								<reference key="IBUINormalTitleColor" ref="111299289"/>
 								<object class="NSColor" key="IBUINormalTitleShadowColor">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
@@ -180,9 +180,18 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">drawToButton</string>
 						<reference key="source" ref="893510759"/>
-						<reference key="destination" ref="338525193"/>
+						<reference key="destination" ref="150106597"/>
 					</object>
 					<int key="connectionID">25</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickToUser:</string>
+						<reference key="source" ref="150106597"/>
+						<reference key="destination" ref="893510759"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">26</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -211,7 +220,7 @@
 							<reference ref="872528613"/>
 							<reference ref="1073126218"/>
 							<reference ref="889658087"/>
-							<reference ref="338525193"/>
+							<reference ref="150106597"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -232,7 +241,7 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="338525193"/>
+						<reference key="object" ref="150106597"/>
 						<reference key="parent" ref="893510759"/>
 					</object>
 				</array>
@@ -253,7 +262,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">25</int>
+			<int key="maxID">26</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
